Fix spacing

--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -23,7 +23,6 @@
 
 .field-tile {
     justify-self: center;
-    align-self: center;
     grid-area: field-tile;
 }
 
@@ -36,13 +35,18 @@
 .player-tile {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 0px 0px;
     grid-auto-flow: column;
     grid-template-areas:
+        "tile-desc tile-desc"
         "top-left top-right"
         "bottom-left bottom-right";
     grid-area: player-tile;
+}
+
+.tile-desc {
+    grid-area: tile-desc;
 }
 
 .top-right {
@@ -68,6 +72,7 @@
 .input {
     grid-area: input;
     display: block;
+    margin:1rem;
 }
 
 .player-input {
